Rangements des fichiers dans des dossiers

--- a/menus/menu2.html
+++ b/menus/menu2.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylemenu.css">
-    <title>Menu - Le délice des sens</title>
+    <link rel="stylesheet" href="/style/stylemenu.css">
+    <title>Menu - La note enchantée</title>
 </head>
 <body>
     <header>
         <nav>
             <button>
-                <i class="fa-solid fa-arrow-left"></i>
+                <div>
+                    <a href="/index.html">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                </div>
             </button>
             <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </nav>
-        <img src="Maquette Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
+        <img src="Maquette Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
     </header>
     <main>
         <div>
             <h1>
-                Le délice des sens
+                La note enchantée
             </h1>
             <i class="fa-light fa-heart"></i>
         </div>
@@ -31,11 +35,11 @@
             </h2>
             <div>
                 <h3>
-                    Tartare de thon
+                    Ravioles de foie gras 
                 </h3>
                 <div>
                     <p>
-                        Assaisonné au yuzu
+                        Accompagnés de leur crème à la truffe
                     </p>
                     <p>
                         25€
@@ -44,11 +48,11 @@
             </div>
             <div>
                 <h3>
-                    Bouchée de homard croustillant
+                    Caviar osciètre
                 </h3>
                 <div>
                     <p>
-                        Et sa farandole de petits légumes
+                        Sur blini à la farine de blé noir
                     </p>
                     <p>
                         35€
@@ -57,14 +61,27 @@
             </div>
             <div>
                 <h3>
-                    Velouté de cèpes 
+                    Homard et espuma de potiron
                 </h3>
                 <div>
                     <p>
-                        Aux truffes
+                        Mariné aux zestes d'orange
                     </p>
                     <p>
                         20€
+                    </p>
+                </div>
+            </div>
+            <div>
+                <h3>
+                    Foie gras de canard cuit entier
+                </h3>
+                <div>
+                    <p>
+                        Confiture de figue et pain toasté
+                    </p>
+                    <p>
+                        35€
                     </p>
                 </div>
             </div>
@@ -75,11 +92,11 @@
             </h2>
             <div>
                 <h3>
-                    Poulet rôti aux herbes de Provence 
+                    Noix de coquilles Saint-Jacques
                 </h3>
                 <div>
                     <p>
-                        Et sa crème de truffe
+                        Sur lit de purée de céleri-rave
                     </p>
                     <p>
                         40€
@@ -88,11 +105,11 @@
             </div>
             <div>
                 <h3>
-                    Langouste rôtie 
+                    Langoustine poêlée
                 </h3>
                 <div>
                     <p>
-                        Et ses légumes de saison
+                        Purée de patate douce
                     </p>
                     <p>
                         35€
@@ -101,11 +118,11 @@
             </div>
             <div>
                 <h3>
-                    Côte de boeuf Angus 
+                    Mijoté de queue de boeuf 
                 </h3>
                 <div>
                     <p>
-                        Et sa purée de panais
+                        Et riz sauvage aux zestes de citron
                     </p>
                     <p>
                         44€
@@ -119,11 +136,11 @@
             </h2>
             <div>
                 <h3>
-                    Farandole de desserts
+                    Macaron noisette et chocolat
                 </h3>
                 <div>
                     <p>
-                        Du chef
+                        Glace au caramel brun et sel de Guérande
                     </p>
                     <p>
                         18€
@@ -132,11 +149,11 @@
             </div>
             <div>
                 <h3>
-                    Crème brulée 
+                    Baba au rhum revisité 
                 </h3>
                 <div>
                     <p>
-                        Revisitée
+                        Avec son coulis de citron
                     </p>
                     <p>
                         22€
@@ -145,11 +162,11 @@
             </div>
             <div>
                 <h3>
-                    Tiramisu 
+                    Tarte au citron meringuée 
                 </h3>
                 <div>
                     <p>
-                        À la noisette
+                        Déstructurée
                     </p>
                     <p>
                         23€
