--- a/menus/menu4.html
+++ b/menus/menu4.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylemenu.css">
-    <title>Menu - À la française</title>
+    <link rel="stylesheet" href="/style/stylemenu.css">
+    <title>Menu - Le délice des sens</title>
 </head>
 <body>
     <header>
         <nav>
             <button>
-                <i class="fa-solid fa-arrow-left"></i>
+                <div>
+                    <a href="/index.html">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                </div>
             </button>
             <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </nav>
-        <img src="Maquette Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
+        <img src="Maquette Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
     </header>
     <main>
         <div>
             <h1>
-                À la française
+                Le délice des sens
             </h1>
             <i class="fa-light fa-heart"></i>
         </div>
@@ -31,11 +35,11 @@
             </h2>
             <div>
                 <h3>
-                    Tartare de poulpe acidulé
+                    Tartare de thon
                 </h3>
                 <div>
                     <p>
-                        Aux zestes d'orange
+                        Assaisonné au yuzu
                     </p>
                     <p>
                         25€
@@ -44,11 +48,11 @@
             </div>
             <div>
                 <h3>
-                    Velouté de légumes d'antan
+                    Bouchée de homard croustillant
                 </h3>
                 <div>
                     <p>
-                        Carotte, panais, topinambour
+                        Et sa farandole de petits légumes
                     </p>
                     <p>
                         35€
@@ -57,11 +61,11 @@
             </div>
             <div>
                 <h3>
-                    Soupe à l'oignon
+                    Velouté de cèpes 
                 </h3>
                 <div>
                     <p>
-                        Revisitée
+                        Aux truffes
                     </p>
                     <p>
                         20€
@@ -75,11 +79,11 @@
             </h2>
             <div>
                 <h3>
-                    Coquilles Saint-Jacques
+                    Poulet rôti aux herbes de Provence 
                 </h3>
                 <div>
                     <p>
-                        Accompagnées d'une purée de panais
+                        Et sa crème de truffe
                     </p>
                     <p>
                         40€
@@ -88,11 +92,11 @@
             </div>
             <div>
                 <h3>
-                    Magret de canard
+                    Langouste rôtie 
                 </h3>
                 <div>
                     <p>
-                        Et parmentier de pommes de terre
+                        Et ses légumes de saison
                     </p>
                     <p>
                         35€
@@ -101,11 +105,11 @@
             </div>
             <div>
                 <h3>
-                    Pigeonneau d'Ille-et-Vilaine
+                    Côte de boeuf Angus 
                 </h3>
                 <div>
                     <p>
-                        Sur son lit de gnocchis aux légumes
+                        Et sa purée de panais
                     </p>
                     <p>
                         44€
@@ -119,11 +123,11 @@
             </h2>
             <div>
                 <h3>
-                    Pétales de violettes glacés
+                    Farandole de desserts
                 </h3>
                 <div>
                     <p>
-                        Et purée de noisettes
+                        Du chef
                     </p>
                     <p>
                         18€
@@ -132,11 +136,11 @@
             </div>
             <div>
                 <h3>
-                    Fondant au chocolat
+                    Crème brulée 
                 </h3>
                 <div>
                     <p>
-                        Revisité
+                        Revisitée
                     </p>
                     <p>
                         22€
@@ -145,11 +149,11 @@
             </div>
             <div>
                 <h3>
-                    Millefeuille croustillant
+                    Tiramisu 
                 </h3>
                 <div>
                     <p>
-                        Myrtilles et pâte d'amande
+                        À la noisette
                     </p>
                     <p>
                         23€
