--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styleindex.css">
+    <link rel="stylesheet" href="style/styleindex.css">
     <title>Ohmyfood - Accueil</title>
 </head>
 <body>
@@ -33,17 +33,23 @@
                 Fonctionnement
             </h1>
             <div>
-                <p>1</p>
+                <div>
+                    <p>1</p>
+                </div>
                 <i class="fa-solid fa-mobile-screen-button"></i>
                 <p>Choisissez un restaurant</p>
             </div>
             <div>
-                <p>2</p>
+                <div>
+                    <p>2</p>
+                </div>
                 <i class="fa-solid fa-list-ul"></i>
                 <p>Composez votre menu</p>
             </div>
             <div>
-                <p>3</p>
+                <div>
+                    <p>3</p>
+                </div>
                 <i class="fa-solid fa-store"></i>
                 <p>Dégustez au restaurant</p>
             </div>
@@ -55,8 +61,10 @@
         </h1>
         <section>
             <article>
-                <a href="menu1.html">
-                    <img src="Maquette Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+                <a href="menus/menu1.html">
+                    <div>
+                        <img src="Maquette Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+                    </div>
                     <div>
                         <h3>
                             La palette du goût
@@ -68,11 +76,18 @@
                     <div>
                         <i class="fa-light fa-heart"></i>
                     </div>
+                    <div>
+                        <p>
+                            Nouveau
+                        </p>
+                    </div>
                 </a>
             </article>
             <article>
-                <a href="menu2.html">
-                    <img src="Maquette Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+                <a href="menus/menu2.html">
+                    <div>
+                        <img src="Maquette Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+                    </div>
                     <div>
                         <h3>
                             La note enchantée
@@ -84,11 +99,18 @@
                     <div>
                         <i class="fa-light fa-heart"></i>
                     </div>
+                    <div>
+                        <p>
+                            Nouveau
+                        </p>
+                    </div>
                 </a>
             </article>
             <article>
-                <a href="menu3.html">
-                    <img src="Maquette Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
+                <a href="menus/menu3.html">
+                    <div>
+                        <img src="Maquette Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
+                    </div>
                     <div>
                         <h3>
                             À la française
@@ -100,11 +122,18 @@
                     <div>
                         <i class="fa-light fa-heart"></i>
                     </div>
+                    <div>
+                        <p>
+                            Nouveau
+                        </p>
+                    </div>
                 </a>
             </article>
             <article>
-                <a href="menu4.html">
-                    <img src="Maquette Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
+                <a href="menus/menu4.html">
+                    <div>
+                        <img src="Maquette Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
+                    </div>
                     <div>
                         <h3>
                             Le délice des sens
@@ -115,6 +144,11 @@
                     </div>
                     <div>
                         <i class="fa-light fa-heart"></i>
+                    </div>
+                    <div>
+                        <p>
+                            Nouveau
+                        </p>
                     </div>
                 </a>
             </article>
