--- a/menus/menu1.html
+++ b/menus/menu1.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylemenu.css">
+    <link rel="stylesheet" href="/style/stylemenu.css">
     <title>Menu - La palette du goût</title>
 </head>
 <body>
     <header>
         <nav>
             <button>
-                <i class="fa-solid fa-arrow-left"></i>
+                <div>
+                    <a href="/index.html">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                </div>
             </button>
             <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </nav>
