--- a/menus/menu3.html
+++ b/menus/menu3.html
@@ -5,23 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stylemenu.css">
-    <title>Menu - La note enchantée</title>
+    <link rel="stylesheet" href="/style/stylemenu.css">
+    <title>Menu - À la française</title>
 </head>
 <body>
     <header>
         <nav>
             <button>
-                <i class="fa-solid fa-arrow-left"></i>
+                <div>
+                    <a href="/index.html">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                </div>
             </button>
             <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </nav>
-        <img src="Maquette Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+        <img src="Maquette Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
     </header>
     <main>
         <div>
             <h1>
-                La note enchantée
+                À la française
             </h1>
             <i class="fa-light fa-heart"></i>
         </div>
@@ -31,11 +35,11 @@
             </h2>
             <div>
                 <h3>
-                    Ravioles de foie gras 
+                    Tartare de poulpe acidulé
                 </h3>
                 <div>
                     <p>
-                        Accompagnés de leur crème à la truffe
+                        Aux zestes d'orange
                     </p>
                     <p>
                         25€
@@ -44,11 +48,11 @@
             </div>
             <div>
                 <h3>
-                    Caviar osciètre
+                    Velouté de légumes d'antan
                 </h3>
                 <div>
                     <p>
-                        Sur blini à la farine de blé noir
+                        Carotte, panais, topinambour
                     </p>
                     <p>
                         35€
@@ -57,27 +61,14 @@
             </div>
             <div>
                 <h3>
-                    Homard et espuma de potiron
+                    Soupe à l'oignon
                 </h3>
                 <div>
                     <p>
-                        Mariné aux zestes d'orange
+                        Revisitée
                     </p>
                     <p>
                         20€
-                    </p>
-                </div>
-            </div>
-            <div>
-                <h3>
-                    Foie gras de canard cuit entier
-                </h3>
-                <div>
-                    <p>
-                        Confiture de figue et pain toasté
-                    </p>
-                    <p>
-                        35€
                     </p>
                 </div>
             </div>
@@ -88,11 +79,11 @@
             </h2>
             <div>
                 <h3>
-                    Noix de coquilles Saint-Jacques
+                    Coquilles Saint-Jacques
                 </h3>
                 <div>
                     <p>
-                        Sur lit de purée de céleri-rave
+                        Accompagnées d'une purée de panais
                     </p>
                     <p>
                         40€
@@ -101,11 +92,11 @@
             </div>
             <div>
                 <h3>
-                    Langoustine poêlée
+                    Magret de canard
                 </h3>
                 <div>
                     <p>
-                        Purée de patate douce
+                        Et parmentier de pommes de terre
                     </p>
                     <p>
                         35€
@@ -114,11 +105,11 @@
             </div>
             <div>
                 <h3>
-                    Mijoté de queue de boeuf 
+                    Pigeonneau d'Ille-et-Vilaine
                 </h3>
                 <div>
                     <p>
-                        Et riz sauvage aux zestes de citron
+                        Sur son lit de gnocchis aux légumes
                     </p>
                     <p>
                         44€
@@ -132,11 +123,11 @@
             </h2>
             <div>
                 <h3>
-                    Macaron noisette et chocolat
+                    Pétales de violettes glacés
                 </h3>
                 <div>
                     <p>
-                        Glace au caramel brun et sel de Guérande
+                        Et purée de noisettes
                     </p>
                     <p>
                         18€
@@ -145,11 +136,11 @@
             </div>
             <div>
                 <h3>
-                    Baba au rhum revisité 
+                    Fondant au chocolat
                 </h3>
                 <div>
                     <p>
-                        Avec son coulis de citron
+                        Revisité
                     </p>
                     <p>
                         22€
@@ -158,11 +149,11 @@
             </div>
             <div>
                 <h3>
-                    Tarte au citron meringuée 
+                    Millefeuille croustillant
                 </h3>
                 <div>
                     <p>
-                        Déstructurée
+                        Myrtilles et pâte d'amande
                     </p>
                     <p>
                         23€
