MAJ Dossiers et fichiers

--- a/menus/menu1.html
+++ b/menus/menu1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/stylemenu.css">
+    <link rel="stylesheet" href="/style/sassstylemenu.css">
     <title>Menu - La palette du goût</title>
 </head>
 <body>
@@ -18,9 +18,9 @@
                     </a>
                 </div>
             </button>
-            <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </nav>
-        <img src="Maquette Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
     </header>
     <main>
         <div>
@@ -166,7 +166,7 @@
         </button>
     </main>
     <footer>
-        <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         <ul>
             <li>
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
