--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/styleindex.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/sassstyleindex.css">
     <title>Ohmyfood - Accueil</title>
 </head>
 <body>
     <header>
-        <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         <nav>
             <div>
                 <i class="fa-solid fa-location-dot"></i>
@@ -63,7 +66,7 @@
             <article>
                 <a href="menus/menu1.html">
                     <div>
-                        <img src="Maquette Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
                     </div>
                     <div>
                         <h3>
@@ -86,7 +89,7 @@
             <article>
                 <a href="menus/menu2.html">
                     <div>
-                        <img src="Maquette Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
                     </div>
                     <div>
                         <h3>
@@ -109,7 +112,7 @@
             <article>
                 <a href="menus/menu3.html">
                     <div>
-                        <img src="Maquette Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
                     </div>
                     <div>
                         <h3>
@@ -132,7 +135,7 @@
             <article>
                 <a href="menus/menu4.html">
                     <div>
-                        <img src="Maquette Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
                     </div>
                     <div>
                         <h3>
@@ -155,7 +158,7 @@
         </section>
     </main>
     <footer>
-        <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         <ul>
             <li>
                 <a href="#">
