--- a/menus/menu2.html
+++ b/menus/menu2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/stylemenu.css">
+    <link rel="stylesheet" href="/style/sassstylemenu.css">
     <title>Menu - La note enchantée</title>
 </head>
 <body>
@@ -18,9 +18,9 @@
                     </a>
                 </div>
             </button>
-            <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         </nav>
-        <img src="Maquette Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
     </header>
     <main>
         <div>
@@ -179,7 +179,7 @@
         </button>
     </main>
     <footer>
-        <img src="Maquette Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
         <ul>
             <li>
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
