--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <header>
         <div class="headlogo">    
-            <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="headlogo__img">
+            <p class="headlogo__text">
+                ohmyfood
+            </p>
         </div>
         <nav>
             <div class="navbar">
@@ -28,9 +30,9 @@
                 <h2 class="description__discover">
                     Découvrez des restaurants d'exception, sélectionnés par nos soins
                 </h2>
-                <button class="description__button">
+                <a class="description__button" href="#restaurants">
                     Explorer nos restaurants
-                </button>
+                </a>
             </div>
         </nav>
         <div class="fonctionnement">
@@ -62,129 +64,129 @@
             </div>
         </div>
     </header>
-    <main>
-        <h1>
+    <main class="main">
+        <h1 class="main__title" id="restaurants">
             Restaurants
         </h1>
-        <section>
-            <article>
+        <section class="main__section">
+            <article class="main__section__card">
                 <a href="menus/menu1.html">
-                    <div>
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+                    <div class="main__section__card__container">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1" class="main__section__card__container__img">
                     </div>
-                    <div>
-                        <h3>
-                            La palette du goût
-                        </h3>
-                        <p>
-                            Ménilmontant
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fa-light fa-heart"></i>
-                    </div>
-                    <div>
-                        <p>
-                            Nouveau
-                        </p>
+                    <div class="main__section__card__description">
+                        <div>
+                            <h3 class="main__section__card__description__name">
+                                La palette du goût
+                            </h3>
+                            <p class="main__section__card__description__place">
+                                Ménilmontant
+                            </p>
+                        </div>
+                        <div class="main__section__card__description__bis">
+                            <div class="main__section__card__description__bis__new">
+                                <p>
+                                    Nouveau
+                                </p>
+                            </div>
+                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
+                        </div>
                     </div>
                 </a>
             </article>
-            <article>
+            <article class="main__section__card">
                 <a href="menus/menu2.html">
-                    <div>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2">
+                    <div class="main__section__card__container">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2" class="main__section__card__container__img">
                     </div>
-                    <div>
-                        <h3>
-                            La note enchantée
-                        </h3>
-                        <p>
-                            Charonne
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fa-light fa-heart"></i>
-                    </div>
-                    <div>
-                        <p>
-                            Nouveau
-                        </p>
+                    <div class="main__section__card__description">
+                        <div>
+                            <h3 class="main__section__card__description__name">
+                                La note enchantée
+                            </h3>
+                            <p class="main__section__card__description__place">
+                                Charonne
+                            </p>
+                        </div>
+                        <div class="main__section__card__description__bis">
+                            <div class="main__section__card__description__bis__new">
+                                <p>
+                                    Nouveau
+                                </p>
+                            </div>
+                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
+                        </div>
                     </div>
                 </a>
             </article>
-            <article>
+            <article class="main__section__card">
                 <a href="menus/menu3.html">
-                    <div>
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
+                    <div class="main__section__card__container">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3" class="main__section__card__container__img">
                     </div>
-                    <div>
-                        <h3>
-                            À la française
-                        </h3>
-                        <p>
-                            Cité Rouge
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fa-light fa-heart"></i>
-                    </div>
-                    <div>
-                        <p>
-                            Nouveau
-                        </p>
+                    <div class="main__section__card__description">
+                        <div>
+                            <h3 class="main__section__card__description__name">
+                                À la française
+                            </h3>
+                            <p class="main__section__card__description__place">
+                                Cité Rouge
+                            </p>
+                        </div>
+                        <div class="main__section__card__description__bis">
+                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
+                        </div>
                     </div>
                 </a>
             </article>
-            <article>
+            <article class="main__section__card">
                 <a href="menus/menu4.html">
-                    <div>
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
+                    <div class="main__section__card__container">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4" class="main__section__card__container__img">
                     </div>
-                    <div>
-                        <h3>
-                            Le délice des sens
-                        </h3>
-                        <p>
-                            Folie-Méricourt
-                        </p>
-                    </div>
-                    <div>
-                        <i class="fa-light fa-heart"></i>
-                    </div>
-                    <div>
-                        <p>
-                            Nouveau
-                        </p>
+                    <div class="main__section__card__description">
+                        <div>
+                            <h3 class="main__section__card__description__name">
+                                Le délice des sens
+                            </h3>
+                            <p class="main__section__card__description__place">
+                                Folie-Méricourt
+                            </p>
+                        </div>
+                        <div class="main__section__card__description__bis">
+                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
+                        </div>
                     </div>
                 </a>
             </article>
         </section>
     </main>
-    <footer>
-        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
-        <ul>
-            <li>
-                <a href="#">
-                    <div>
+    <footer class="footer">
+        <p class="footer__logo">
+            ohmyfood
+        </p>
+        <ul class="footer__ul">
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone footer__ul__li__link__icone--more">
                         <i class="fa-solid fa-utensils"></i>
                     </div>
                     Proposer un restaurant
                 </a>
             </li>
-            <li>
-                <a href="#">
-                    <div>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone">
                         <i class="fa-solid fa-handshake-angle"></i>
                     </div>
                     Devenir partenaire
                 </a>
             </li>
-            <li>
-                <a href="#">Mentions légales</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
-            <li>
-                <a href="#">Contact</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
