Refonte du dossier

--- a/menu1.html
+++ b/menu1.html
@@ -7,21 +7,18 @@
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/sassstylemenu.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/sassstylemenu.css">
     <title>Menu - La palette du goût</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>
-                <div>
-                    <a href="/index.html">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </a>
-                </div>
-            </button>
-            <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            <div class="headlogo">    
+                <p class="headlogo__text">
+                    ohmyfood
+                </p>
+            </div>
         </nav>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
     </header>
