--- a/menu4.html
+++ b/menu4.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/5e0a723264.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/sassstylemenu.css">
     <title>Menu - Le délice des sens</title>
 </head>
